fix the error for sign in

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 REACT_APP_GOOGLE_CLIENTID="381830651475-6rbjg6pruiqtoaqfomsv53abg3u6hnmf.apps.googleusercontent.com"
+REACT_APP_API_KEY="becee10f0261f6756adbf65937d21936"
