--- a/package.json
+++ b/package.json
@@ -619,7 +619,6 @@
     "react-is": "^17.0.2",
     "react-redux": "^8.1.2",
     "react-refresh": "^0.11.0",
-    "react-scripts": "^5.0.1",
     "react-transition-group": "^4.4.5",
     "read-cache": "^1.0.0",
     "readable-stream": "^3.6.2",
@@ -849,29 +848,28 @@
       "last 1 safari version"
     ]
   },
-  
- 
   "devDependencies": {
     "@babel/core": "^7.22.9",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-react": "^7.22.5",
-    "babel-loader": "^9.1.3",
-    "react-scripts": "latest",
-    "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.3",
+    "babel-loader": "^9.1.3",
     "react": "^17.0.2",
     "react-currency-format": "^1.1.0",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "react-scripts": "^5.0.1",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
   },
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
-
+  "development": [
+    "last 1 chrome version",
+    "last 1 firefox version",
+    "last 1 safari version"
+  ],
+  "author": "",
+  "license": "ISC"
+}
